# Mantrax-Game-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CompileEngine_VS_19_2022.bat  Compile_Bash.bat  GarinLibrary.lib  GarinLibraryEditor.lib  LibCMakeLists.txt  Makefile  README.md  __CMakeLists.txt  build.bat  main
Compiler/: CompileEngine_VS_19_2022.bat
Compiler-Lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GarinLibrary.sln  GarinLibrary.vcxproj  GarinLibrary.vcxproj.filters  GarinLibs.sln  GarinLibs.vcxproj  GarinLibs.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Compiler-Lib/Debug/: GarinLibrary.exp  GarinLibrary.lib
Compiler-Lib/GarinEditor/: CMakeLists.txt
Compiler-Lib/GarinLibrary/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GarinLibrary.sln  GarinLibrary.vcxproj  GarinLibrary.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Compiler-Lib/GarinLibrary/Debug/: GarinLibrary.exp  GarinLibrary.lib
Compiler-Lib/GarinLibrary/GarinLibrary.dir/Debug/: GarinLibrary.dll.recipe
Compiler-Lib/GarinLibrary/GarinLibrary.dir/Debug/GarinLibrary.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Compiler-Lib/GarinLibrary/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Compiler-Lib/GarinLibrary/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Compiler-Mantrax-PlayBackEngine/: CompileEngine_VS_19_2022.bat
Compiler-Mantrax-PlayBackEngine/COMPILER/: CMakeLists.txt
Compiler-Mantrax-PlayBackEngine/LIB/: CMakeLists.txt
Compiler/COMPILER/: CMakeLists.txt
Compiler/LIB/: CMakeLists.txt
Mantrax-Audio/includes/: AudioManager.h
Mantrax-Audio/src/: AudioManager.cpp
Mantrax-Core/includes/: AppSettings.h  AssetsRegistry.h  ComponentFactory.h  Core.h  DynamicLibLoader.h  ECS.h  EngineStartCore.h  EventSystem.h  FBXModelComponent.h  FileManager.h  GAnimator.h  GAudio.h  GBody.h  GCamera.h  GCharacter.h  GCollision.h  GLightDirectional.h  GLightPoint.h  GLightSpot.h  GMaterial.h  GScript.h  GameBehaviour.h  GameBehaviourFactory.h  GarinComponents.h  GarinIO.h  GarinNatives.h  ILogger.h  IconsManager.h  InputSystem.h  LayerManager.h  LightComponent.h  LightData.h  Loader.h  Mesh.h  Model.h  ModelComponent.h  Node_Print.h  ResourcesManager.h  ServiceLocator.h  TileMap.h  (+2 more)
Mantrax-Core/src/: ComponentFactory.cpp  DynamicLibLoader.cpp  EngineStartCore.cpp  EventSystem.cpp  FileManager.cpp  GAnimator.cpp  GAudio.cpp  GBody.cpp  GCamera.cpp  GCaster.cpp  GCharacter.cpp  GCollision.cpp  GLightDirectional.cpp  GLightPoint.cpp  GLightSpot.cpp  GMaterial.cpp  GScript.cpp  GScriptLua.cpp  GarinIO.cpp  (+7 more)
Mantrax-DLL/: imgui.ini
Mantrax-Data/MyFirstGame/wlibsgpp/: CMakeLists.txt  GameLibsLoader.h
Mantrax-Doc/: adder.php  guardar_documentacion.php  index.html  mostrar_documentacion.php  ver_documento.php
Mantrax-Hub/: Form1.Designer.cs  Form1.cs  packages.config
Mantrax-Hub-Electron/: imgui.ini  index.html  main.js  package-lock.json  package.json  tailwind.config.js
Mantrax-Icons/: Move.aseprite  ORTHO.aseprite  PerspectiveCamera.aseprite  Rotate.aseprite
Mantrax-Obsolete/: GScriptLua.cpp  GScriptLua.h
MantraxGameCore/: MantraxGameCore.csproj  MantraxGameCore.sln
garin-audio/: lib.mk
garin-compiler-android/: settings.gradle.kts
garin-compiler-android/app/src/main/cpp/: CMakeLists.txt  Model.h  Renderer.cpp  Renderer.h  ResourceLoader.h  TextureAsset.cpp  TextureAsset.h  main.cpp
garin-core/: lib.mk
garin-data/: resource.h  resource.rc
garin-dll/: imgui.ini
garin-dll/projects/test/wlibsgpp/: CMakeLists.txt
garin-dll/projects/test/wlibsgpp/garin-core/includes/: AppSettings.h  ComponentFactory.h  ECS.h  FileManager.h  GBody.h  GCollision.h  GScript.h  GameBehaviourFactory.h  GameBehaviourRunner.h  GarinBehaviours.h  GarinComponents.h  GarinEvents.h  GarinIO.h  GarinMaths.h  InputSystem.h  Mesh.h  Model.h  ModelComponent.h
garin-dll/projects/test/wlibsgpp/garin-core/src/: ComponentFactory.cpp  FileManager.cpp  GBody.cpp  GMaterial.cpp  GScript.cpp  LightComponent.cpp  ModelComponent.cpp  TerrainGenerator.cpp
garin-dll/projects/test/wlibsgpp/garin-engine/includes/: CGScript.h  CModel.h  ComponentsDrawer.h  EditorGUI.h  FilesUI.h  GameSettingsUI.h  IconsManager.h  InspectorUI.h  MainBarUI.h  UIAdministrator.h  UIComponent.h  gamescene.h
garin-dll/projects/test/wlibsgpp/garin-engine/src/: AComponent.cpp  AssetsUI.cpp  CGScript.cpp  CModel.cpp  CRigidbody.cpp  ComponentsDrawer.cpp  EditorConfigs.cpp  HierarchyUI.cpp  IconsManager.cpp  InspectorUI.cpp  MainBarUI.cpp  MenuUI.cpp  SceneUI.cpp  UIAdministrator.cpp  gamescene.cpp
garin-dll/projects/test/wlibsgpp/garin-graphics/includes/: Drawer.h  Graphics.h
garin-dll/projects/test/wlibsgpp/garin-graphics/includes/glad/: glad.h
garin-dll/projects/test/wlibsgpp/garin-graphics/src/: Graphics.cpp
garin-dll/projects/test/wlibsgpp/garin-physics/includes/: GarinCollisionEvents.h  PhysicsEngine.h
garin-dll/projects/test/wlibsgpp/garin-physics/libs/: PhysXTask_static_64.lib
garin-dll/projects/test/wlibsgpp/garin-scene/includes/: scenes.h
garin-dll/projects/test/wlibsgpp/garin-scene/src/: scenes.cpp
garin-dll/projects/test/wlibsgpp/garin-ui/includes/: ImGuizmo.cpp
garin-dll/projects/test/wlibsgpp/garin-ui/src/: GarinUI.cpp
garin-game/: EditorConfigs.cpp  EditorGUI.h  gamescene.h  main.cpp
garin-graphics/: lib.mk
garin-hub/: Form1.Designer.cs  Program.cs  garin-hub.csproj  garin-hub.sln
garin-maths/: lib.mk
garin-models/: camera.blend
garin-physics/: lib.mk
garin-scene/: lib.mk
garin-scripting/: lib.mk
garin-shaderlab/: MiShader.shader  Program.cs  garin-shaderlab.csproj  garin-shaderlab.sln
garin-ui/: lib.mk
garin-vr/: lib.mk
src/: gamescene.h  main.cpp
(+887 files in other folders)
